# BundleSDF

./: .gitattributes  .gitignore  LICENSE.txt  Utils.py  benchmark_ho3d.py  build.sh  bundlesdf.py  config.yml  gui.py  loftr_wrapper.py  nerf_helpers.py  nerf_runner.py  offscreen_renderer.py  readme.md  run_custom.py  run_ho3d.py  segmentation_utils.py  tool.py
BundleTrack/: .gitignore  CMakeLists.txt  LICENSE  config_behave.yml  config_ho3d.yml  config_ycbineoat.yml
BundleTrack/LoFTR/: .gitignore  predict.py
BundleTrack/LoFTR/configs/loftr/indoor/scannet/: loftr_ds_eval.py
BundleTrack/LoFTR/demo/: run_demo.sh
BundleTrack/LoFTR/scripts/reproduce_test/: outdoor_ot.sh
BundleTrack/LoFTR/src/loftr/: loftr.py
BundleTrack/LoFTR/src/loftr/utils/: coarse_matching.py
BundleTrack/pybind_interface/: pybind_api.cpp
BundleTrack/scripts/: data_reader.py
BundleTrack/src/: Bundler.cpp  Bundler.h  EigenDenseBaseAddons.h  FeatureManager.cpp  FeatureManager.h  Frame.cpp  Frame.h  Utils.cpp  Utils.h
BundleTrack/src/cuda/: CUDACache.cpp  CUDACache.cu  CUDACache.h  CUDACacheUtil.h  CUDACameraUtil.h  CUDAImageUtil.cu  CUDAImageUtil.h  LICENSE  LossGPU.cpp  LossGPU.h  SBA.cu  SBA.h  SIFTImageManager.cpp  SIFTImageManager.cu  SIFTImageManager.h  common.h  cudaUtil.h  cuda_SimpleMatrixUtil.h  cuda_ransac.cu  cuda_ransac.h
BundleTrack/src/cuda/Solver/: CUDASolverBundling.cu  CUDASolverBundling.h  ICPUtil.h  LieDerivUtil.h  SolverBundling.cu  SolverBundlingDenseUtil.h  SolverBundlingEquationsLie.h  SolverBundlingParameters.h  SolverBundlingState.h
BundleTrack/src/spdlog/: common.h  tweakme.h
docker/: dockerfile  run_container.sh
mycuda/: bindings.cpp  common.cu  common.h
mycuda/torch_ngp_grid_encoder/: bindings.cpp  grid.py  gridencoder.cu  gridencoder.h
